# cpv_deviation_rca

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
scripts/: demo.py  ship.sh
src/rca_copilot/: __init__.py  cpv.py  evidence.py  fishbone.py  llm.py  nelson.py  rag.py  scoring.py  signals.py  viz.py
src/rca_copilot/data/: __init__.py  synthetic.py
tests/: test_nelson.py  test_scoring.py  test_signals.py  test_viz.py
